[package]
name = "hamgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
dirs = "5.0"
bitflags = "2"
taffy = "0.7.1"
winapi = { version = "0.3", features = ["winuser"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
egui_sdl2_platform = "0.3.0"
egui = "=0.27.2"
egui_sdl2_canvas = { path = "../../rust/egui_sdl2_canvas" }

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["image", "mixer", "ttf"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]
